--- a/FUSS/FUSS/templates/login.html
+++ b/FUSS/FUSS/templates/login.html
@@ -1,14 +1,17 @@
 {% extends "layout.html" %}
 {% block body %}
-  <h2>Login</h2>
-  {% if error %}<p class=error><strong>Error:</strong> {{ error }}</p>{% endif %}
-  <form action="{{ url_for('login') }}" method=post>
+<h2>Login</h2>
+  {% if error %}
+<p class=error>
+    <strong>Error:</strong> {{ error }}
+</p>{% endif %}
+<form action="{{ url_for('login') }}" method=post>
     <dl>
-      <dt>Username:
-      <dd><input type=text name=username>
-      <dt>Password:
-      <dd><input type=password name=password>
-      <dd><input type=submit value=Login>
+        <dt>Username:
+        <dd><input type=text name=username>
+        <dt>Password:
+        <dd><input type=password name=password>
+        <dd><input type=submit value=Login>
     </dl>
-  </form>
+</form>
 {% endblock %}
