add interaction to devices moved device templates

--- a/FUSS/FUSS/templates/layout.html
+++ b/FUSS/FUSS/templates/layout.html
@@ -51,7 +51,7 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-3 col-md-2 sidebar">
+            <div class="col-sm-2 col-md-1 sidebar">
                 <!--<ul class="nav nav-sidebar">
                     <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
                     <li><a href="#">Reports</a></li>
@@ -74,9 +74,13 @@
                 </ul>
 
             </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <div class="col-sm-8 col-sm-offset-2 col-md-9 col-md-offset-1 main">
                 {% block body %}{% endblock %}
             </div>
+            <div class="col-sm-3 col-sm-offset-10 col-md-2 col-md-offset-10 sidebar">
+               {% block settings %} {% endblock %}
+            </div>
+
         </div>
     </div>
     <!-- Bootstrap core JavaScript
