--- a/FUSS/FUSS/templates/devices/dummy_page.html
+++ b/FUSS/FUSS/templates/devices/dummy_page.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     <h2>{{ objects['device_name'] }}  : {{ objects['device_type'] }}</h2>
+    ALL sensor entries: 
+    <br />
     <img src="graph.png"/>
 {% endblock %}
