--- a/FUSS/FUSS/templates/layout.html
+++ b/FUSS/FUSS/templates/layout.html
@@ -88,8 +88,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="{{url_for('static', filename='scripts/bootstrap.min.js')}}" />
+    <script src="{{url_for('static', filename='scripts/bootstrap.min.js')}}"></script>
 
+    {% block scripts %}{% endblock %}
 </body>
 
 </html>
