Add profile page Add admin system page

--- a/FUSS/FUSS/templates/adminPanel.html
+++ b/FUSS/FUSS/templates/adminPanel.html
@@ -16,6 +16,9 @@
     <input type="hidden" name="sensorID" value="{{s.id}}" />
 </form>
 {% endfor %}
+{% elif system %}
+<p>System settings</p>
+<a href="{{url_for('cleanup')}}">Run db cleanup</a>
 {% endif %}
 
 <table style="width:75%">
